refactor: clean code